# timetable-management-system

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Frontend/: index.html
app/: database.py  main.py  models.py  schemas.py  seed_data.py
app/routes/: admin.py  pdf.py  student.py  teacher.py  timetable.py
app/services/: pdf_service.py  timetable_service.py
app/ui/: admin.py  dashboard.py  login.py  student.py  teacher.py  timetable.py
app/utils/: helper.py
